031214分のアップデート

--- a/html/perch/templates/content/maininfo.html
+++ b/html/perch/templates/content/maininfo.html
@@ -29,4 +29,6 @@
 	<section>
 		<perch:content id="map" type="map" label="Address for map" width="400" height="300" zoom="15" />
 	</section>
+<!-- 	<perch:content id="slug" for="title" type="slug" suppress="true" /> -->
+<perch:content type="text" id="latlong" label="latitude, longitude" value="true" suppress="true" />
 </section>
