--- a/html/perch/templates/events/event.html
+++ b/html/perch/templates/events/event.html
@@ -2,7 +2,7 @@
     <h2 class="summary"><perch:events id="eventTitle" /></h2>
 
     <p class="dtstart">
-    	<span class="value-title" title="<perch:events id="eventDateTime" format="c" />"><perch:events id="eventDateTime" format="%c" /></span>
+    	<span class="value-title" title="<perch:events id="eventDateTime" format="ymd" />"><perch:events id="eventDateTime" format="%Y %m %d" /></span>
     </p>
 	<p><perch:events id="eventOpen" label="event openings" type="text"/></p>
 	<p>レベル <perch:events id="eventLevel" label="event level" type="radio" options="★, ★★, ★★★, ★★★★, ★★★★★"/></p>
